test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-reinstall-policy
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: cpol-clone-sync-single-source-multiple-targets-ns
      kind: Secret
      name: regcred
      namespace: '{{request.object.metadata.name}}'
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
    name: sync-image-pull-secret
