test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/03-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-single-source-multiple-targets-trigger-ns-1
type: Opaque
data:
  foo: Zm9v
---
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-single-source-multiple-targets-trigger-ns-2
type: Opaque
data:
  foo: Zm9v
