test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/chainsaw-step-03-assert-1-2.yaml
apiVersion: v1
data:
  foo: Zm9v
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-single-source-multiple-targets-trigger-ns-2
type: Opaque
