test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/04-delete.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: delete
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: kyverno.io/v1
      kind: ClusterPolicy
      name: cpol-clone-sync-reinstall-policy
