test/conformance/chainsaw/generate/clusterpolicy/cornercases/cpol-clone-sync-reinstall-policy/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-sync-reinstall-policy
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-sync-reinstall-policy
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - apply:
        file: chainsaw-step-02-apply-1-2.yaml
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
    - assert:
        file: chainsaw-step-03-assert-1-2.yaml
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: cpol-clone-sync-reinstall-policy
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1-1.yaml
  - name: step-06
    try:
    - apply:
        file: chainsaw-step-06-apply-1-1.yaml
  - name: step-07
    try:
    - sleep:
        duration: 3s
  - name: step-08
    try:
    - assert:
        file: chainsaw-step-08-assert-1-1.yaml
    - assert:
        file: chainsaw-step-08-assert-1-2.yaml
  - name: step-09
    try:
    - apply:
        file: chainsaw-step-09-apply-1-1.yaml
  - name: step-10
    try:
    - sleep:
        duration: 3s
  - name: step-11
    try:
    - assert:
        file: chainsaw-step-11-assert-1-1.yaml
    - assert:
        file: chainsaw-step-11-assert-1-2.yaml
